--- a/dalipjandir/package.json
+++ b/dalipjandir/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "react": "^16.8.6",
+    "react-animate-height": "^2.0.16",
     "react-dom": "^16.8.6",
     "react-load-script": "0.0.6",
     "react-scripts": "3.0.1"
