--- a/dalipjandir/package.json
+++ b/dalipjandir/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "jquery": "^3.4.1",
     "react": "^16.11.0",
     "react-animate-height": "^2.0.16",
     "react-dom": "^16.11.0",
