--- a/dalipjandir/package.json
+++ b/dalipjandir/package.json
@@ -8,7 +8,8 @@
     "react-animate-height": "^2.0.16",
     "react-dom": "^16.11.0",
     "react-load-script": "0.0.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "react-scroll": "^1.7.14"
   },
   "scripts": {
     "start": "react-scripts start",
