--- a/dalipjandir/package.json
+++ b/dalipjandir/package.json
@@ -1,12 +1,13 @@
 {
   "name": "dalipjandir",
+  "homepage": "http://dalipjandir.ca",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
     "jquery": "^3.4.1",
-    "react": "^16.11.0",
-    "react-animate-height": "^2.0.16",
-    "react-dom": "^16.11.0",
+    "react": "^16.12.0",
+    "react-animate-height": "^2.0.17",
+    "react-dom": "^16.12.0",
     "react-load-script": "0.0.6",
     "react-scripts": "3.0.1",
     "react-scroll": "^1.7.14"
